[package]
name = "compute-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
compute-graph-macros = {path = "macros"}

tracing = {version = "0.1"}
tokio = {version = "1", features = ["rt", "macros", "sync", "time"]}
serde_json = {version = "1.0"}
serde = {version = "1.0"}
futures = {version = "0.3"}
tungstenite = {version = "0.26"}
tokio-tungstenite = {version = "0.26"}
bytes = {version = "1.10"}
rand = {version = "0.9"}
tokio-stream = {version = "0.1"}
tokio-util = {version = "0.7"}
pin-project = {version = "1"}

[dev-dependencies]
tokio = {version = "1", features = ["rt-multi-thread"]}
