[package]
name = "compute-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
compute-graph-macros = {path = "macros"}

rand = {version = "0.9"}

serde_json = {version = "1.0"}
serde = {version = "1.0"}

tungstenite = {version = "0.26"}
tokio-tungstenite = {version = "0.26", features = ["connect", "rustls-tls-webpki-roots"]}
bytes = {version = "1.10"}

tokio = {version = "1", features = ["rt", "macros", "sync", "time"]}
tokio-stream = {version = "0.1"}
tokio-util = {version = "0.7"}
futures = {version = "0.3"}
tracing = {version = "0.1"}
pin-project = {version = "1"}

[dev-dependencies]
tokio = {version = "1", features = ["rt-multi-thread"]}
